load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")
load("@npm//@storybook/react:index.bzl", "build_storybook", "start_storybook")
load("@npm//vite:index.bzl", "vite")
load("//rules/vite:vite_build.bzl", "vite_build")
load("//rules/test:jest.bzl", "jest_test")
load("@npm//jest:index.bzl", "jest")
load("//rules/lint:index.bzl", "eslint_config", "eslint_test", "prettier_test")
load("//rules/package_json_helpers:generate.bzl", "generate_package_json_helpers")
load("//rules/publish:publish_fas.bzl", "publish_fas")
load("//rules/publish:publish_storybook.bzl", "publish_storybook")
load("//rules/build_sed:build_sed.bzl", "build_sed")
load("//rules/storybook:move_assets.bzl", "move_assets")

# Filename conventions described at
# https://create-react-app.dev/docs/running-tests#filename-conventions
_TESTS = [
    "src/**/*.test.js*",
    "src/**/*.test.ts*",
    "src/**/*.spec.js*",
    "src/**/*.spec.ts*",
    "src/**/__tests__/**/*.js*",
    "src/**/__tests__/**/*.ts*",
    "src/__mocks__/*",
    "src/**/__mocks__/*",
    "src/utils/test/*",
]

_STORYBOOK = [
    ".storybook/*",
    "src/**/*.stories.ts*",
]

TESTS_AND_STORYBOOK = glob(_TESTS + _STORYBOOK)

_SOURCES = [
    "src/**/*.ts*",
    "src/**/*.png",
    "src/**/*.jpg",
]

SOURCES = glob(
    _SOURCES,
    exclude = _TESTS + _STORYBOOK,
)

PUBLIC = glob([
    "public/*",
])

# Generates the below helpers.
#
# Usage:
#   bazel run :generate_package_json_helpers
generate_package_json_helpers(
    name = "generate_package_json_helpers",
    out_dir = "build",
    package_json = "//:package.json",
    src_dir = "src",
    workspace = "@npm",
)

### start of auto-generated helpers ###

# Dependencies from package.json
DEPENDENCIES = [
    "@npm//@cognite/cogs.js",
    "@npm//@cognite/reveal-v2",
    "@npm//@cognite/sdk",
    "@npm//@cognite/sdk-v5",
    "@npm//@dnd-kit/core",
    "@npm//@dnd-kit/sortable",
    "@npm//@sentry/browser",
    "@npm//dayjs",
    "@npm//formik",
    "@npm//gridstack",
    "@npm//i18next",
    "@npm//konva",
    "@npm//lodash",
    "@npm//moment",
    "@npm//react",
    "@npm//react-date-range",
    "@npm//react-dom",
    "@npm//react-glider",
    "@npm//react-modal",
    "@npm//react-query",
    "@npm//react-redux",
    "@npm//react-router-dom",
    "@npm//react-virtualized",
    "@npm//react-virtualized-tree",
    "@npm//redux",
    "@npm//redux-devtools-extension",
    "@npm//redux-thunk",
    "@npm//reselect",
    "@npm//styled-components",
    "@npm//typesafe-actions",
    "@npm//victory",
    "//packages/metrics",
    "//packages/sidecar",
    "//packages/z-index",
    "//packages/auth-utils",
    "//packages/react-container",
    "//packages/react-i18n",
    "//packages/ornate",
]

# Type dependencies from package.json
TYPE_DEPENDENCIES = [
    "@npm//@types/history",
    "@npm//@types/lodash",
    "@npm//@types/react",
    "@npm//@types/react-date-range",
    "@npm//@types/react-dom",
    "@npm//@types/react-modal",
    "@npm//@types/react-redux",
    "@npm//@types/react-router-dom",
    "@npm//@types/react-virtualized",
    "@npm//@types/redux-mock-store",
    "@npm//@types/sinon",
    "@npm//@types/storybook__react",
    "@npm//@types/styled-components",
]

# Dev dependencies from package.json
DEV_DEPENDENCIES = [
    "@npm//@storybook/addon-actions",
    "@npm//@storybook/addons",
    "@npm//@testing-library/jest-dom",
    "@npm//@testing-library/react",
    "@npm//eslint-config-react-app",
    "@npm//redux-mock-store",
    "@npm//sinon",
]

# Mappings for absolute imports from baseUrl @unused
mappings_dict = {
    "AppRoot": "build/AppRoot",
    "__mocks": "build/__mocks",
    "components": "build/components",
    "constants": "build/constants",
    "context": "build/context",
    "global-styles": "build/global-styles",
    "hooks": "build/hooks",
    "images": "build/images",
    "index": "build/index",
    "pages": "build/pages",
    "providers": "build/providers",
    "react-app-env.d": "build/react-app-env.d",
    "serviceWorker": "build/serviceWorker",
    "setupTests": "build/setupTests",
    "store": "build/store",
    "storybook": "build/storybook",
    "styles": "build/styles",
    "types": "build/types",
    "typings": "build/typings",
    "utils": "build/utils",
    "validators": "build/validators",
}

### end of auto-generated helpers ###

BROWSER_DEPS = [
    "@npm//assert",
    "@npm//buffer",
    "@npm//util",
]

eslint_config(
    name = "eslint_config",
    src = ":.eslintrc.js",
    deps = [
        ".eslintrc.production.js",
        "//:eslint_config",
    ],
)

eslint_test(
    name = "eslint_test",
    data = SOURCES + TESTS_AND_STORYBOOK + [
        ":tsconfig.json",
        "//:tsconfig.json",
    ],
    eslint_config = ":eslint_config",
)

prettier_test(
    name = "prettier_test",
    data = SOURCES + TESTS_AND_STORYBOOK,
    prettier_config = "//:prettier_config",
)

# We don't want to teach vite to include from multiple directories
# So we copy everything it wants to read to the output "bin" directory
copy_to_bin(
    name = "copy_static_files",
    srcs = SOURCES + PUBLIC + [
        ":package.json",
        ":tsconfig.json",
        ":index.html",
        ":.env.production",
        ":.env.development",
    ],
)

copy_to_bin(
    name = "vite_config",
    srcs = [":vite.config.ts"],
)

# vite can only work if the working directory is the root of the application.
# So we'll need to chdir before it runs.
write_file(
    name = "write_chdir_script",
    out = "chdir.js",
    content = ["process.chdir(__dirname)"],
)

# For ibazel run to properly pick the changes we need to run from the Workspace directory
write_file(
    name = "write_chdir_worspace_script",
    out = "chdir-workspace.js",
    content = ["process.chdir(require('path').join(process.env.BUILD_WORKSPACE_DIRECTORY, '" + package_name() + "'));"],
)

_RUNTIME_DEPS = [
    "chdir.js",
    "copy_static_files",
    "//:tsconfig",
]

### vite build ###

vite_build(
    name = "build",
    args = [
        "--node_options=--require=./$(execpath chdir.js)",
        "build",
    ],
    data = _RUNTIME_DEPS + DEPENDENCIES + BROWSER_DEPS + TYPE_DEPENDENCIES + [
        ":vite_config",
        "@npm//@vitejs/plugin-react",
        "@npm//vite-tsconfig-paths",
        "@npm//vite-plugin-svgr",
        "@npm//vite-plugin-babel-macros",
    ],
    env = {
        "INLINE_RUNTIME_CHUNK": "false",
    },
    output_dir = True,
)

### vite start ###

vite(
    name = "start",
    args = [
        "--node_options=--require=./$(rootpath chdir-workspace.js)",
        "--https",
    ],
    data = _RUNTIME_DEPS + [
        "chdir-workspace.js",
    ],
    env = {
        "NODE_OPTIONS": "--max_old_space_size=4096",
    },
)

### vite test ###

copy_to_bin(
    name = "copy_test_files",
    srcs = TESTS_AND_STORYBOOK,
)

jest_test(
    name = "jest_test",
    srcs = SOURCES + TESTS_AND_STORYBOOK + [
        "//apps:jest.config.js",
        "//apps:jest.react.config.js",
        "//apps:babelTransform.js",
        ":tsconfig.json",
        "//:tsconfig.json",
    ],
    jest_args = [],
    jest_config = "jest.config.js",
    service_name = "digital-cockpit",
    deps = DEPENDENCIES + DEV_DEPENDENCIES + TYPE_DEPENDENCIES + ["@npm//babel-preset-react-app"],
)

### vite test Dev ###
jest(
    name = "jest",
    args = [
        "--node_options=--require=./$(rootpath chdir-workspace.js)",
        "--config",
        "jest.config.js",
        "--runInBand",
    ],
    data = _RUNTIME_DEPS + [
        "chdir-workspace.js",
    ],
    env = {
        "DISABLE_ESLINT_PLUGIN": "true",
    },
    tags = [
        # This tag instructs ibazel to pipe into stdin a event describing actions.
        # ibazel send EOF to stdin by default and `react-scripts start` will stop when getting EOF in stdin.
        # So use this to prevent EOF.
        "ibazel_notify_changes",
    ],
)

sh_binary(
    name = "build_sed_default",
    srcs = ["//rules/build_sed:sed_linux.sh"],
)

sh_binary(
    name = "build_sed_darwin",
    srcs = ["//rules/build_sed:sed_darwin.sh"],
)

# Replace PUBLIC_URL_VALUE placeholder with '' in order to run e2e tests
# If you need additional env vars being set during e2e tests run add them into
# :build target above and override here
build_sed(
    name = "build_sed",
    app = "Digital Cockpit",
    binary = select({
        "@bazel_tools//src/conditions:darwin": ":build_sed_darwin",
        "//conditions:default": ":build_sed_default",
    }),
    out_dir = "build_bazel",
    src_dir = ":build",
)

### Storybook ###

copy_to_bin(
    name = "copy_storybook_files",
    srcs = TESTS_AND_STORYBOOK,
)

build_storybook(
    # Note: If you want to change the name make sure you pass that value with -o into args
    # https://storybook.js.org/docs/react/api/cli-options
    name = "storybook-static-tmp",
    args = [
        # Suppress verbose build output
        "--quiet",
        "-o",
        "storybook-static-tmp",
    ],
    chdir = "$(RULEDIR)",
    data = _RUNTIME_DEPS + DEPENDENCIES + BROWSER_DEPS + DEV_DEPENDENCIES + TYPE_DEPENDENCIES + [
        "copy_storybook_files",
        "@npm//@storybook/addon-essentials",
        "@npm//@storybook/addon-links",
        "@npm//@storybook/react",
        "@npm//@storybook/builder-vite",
        "@npm//vite-plugin-babel-macros",
        "@npm//vite-tsconfig-paths",
    ],
    output_dir = True,
)

move_assets(
    name = "storybook-static",
    out_dir = "storybook-static",
    src_dir = ":storybook-static-tmp",
    tmp_dir = "tmp",
)

start_storybook(
    name = "start-storybook",
    args = [
        "--node_options=--require=./$(rootpath chdir-workspace.js)",
        "-c",
        ".storybook-dev",
        "-p",
        "6006",
    ],
    data = [
        "chdir-workspace.js",
        # Bazel needs to give access @tippyjs in cogs.js
        "@npm//@cognite/cogs.js",
    ],
    tags = [
        # This tag instructs ibazel to pipe into stdin a event describing actions.
        # ibazel send EOF to stdin by default and target will stop when getting EOF in stdin.
        # So use this to prevent EOF.
        "ibazel_notify_changes",
    ],
)

publish_storybook(
    name = "publish_storybook",
    build = ":storybook-static",
    # Storybook sub domain to be used
    sub_domain = "digital-cockpit",
)

### FAS ###

publish_fas(
    name = "publish_fas",
    build = ":build",
    package_json = ":package.json",
    # Subdomain name used for the pull requests preview.
    preview_subdomain = "digital-cockpit",
    # FAS production app id
    production_app_id = "digital-cockpit",
    # FAS app identifier (repo) shared across both production and staging apps
    repo_id = "digital-cockpit",
    # Sentry project name
    sentry_project_name = "digital-cockpit",
    # FAS staging app id
    staging_app_id = "digital-cockpit-staging",
    versioning_strategy = "multi-branch",
)
